tests/type-error/InfiniteType.vix
data List a where
  Nil : List a
  Cons : a -> List a -> List a

data Bool where
  False : Bool
  True : Bool

test : List Int
test = Cons True (Ref Nil)
